--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,13 @@
-<li>
-  <%= comment.body %> -
-  <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago</small>
-
-  <%= form_for [comment, Comment.new] do |f| %>
-      <%= f.text_field :body, placeholder: "Add a Reply" %><br/>
-      <%= f.submit "Reply"  %>
-      <% end %>
-
-  <ul>
-      <%= render partial: 'comments/comment', collection: comment.comments %>
-  </ul>
-
-</li>
+<div id="comment">
+  <div class="user-name">
+    <%= comment.user.username %>
+  </div>
+  <div class="comment-content">
+    <%= comment.content %>
+  </div>
+  <% if comment.user == current_user %>
+    <%= link_to tweet_comment_path(tweet, comment), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %>
+      <span class="glyphicon glyphicon-remove delete-comment"></span>
+    <% end %>
+  <% end %>
+</div>
