--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Body:</strong>
-  <%= @tweet.body %>
+  <%= auto_link(parse(truncate(@tweet.body, :ommision => "... Read More", :length => 100)), html: { target: '_blank' }) %>
 </p>
 
 <p>
@@ -23,17 +23,46 @@
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %><br>
-<%= render 'partials/comments', tweet: @tweet %>
+<%#= render 'partials/comments', tweet: @tweet %>
     <%= render 'partials/retweet', tweet: @tweet %>
   	<%= render 'partials/likes', tweet: @tweet %>
 
 <h3>Comments</h3>
 
-<%= form_for [@tweet, Comment.new] do |f| %>
-<%= f.text_area :body, placeholder: "Add a comment" %><br/>
-<%= f.submit "Add Comment" %>
-<% end %>
+<div class="post-bottom">
+    <div class="caption">
+      <div class="user-name">
+        Tweet by <%= @tweet.user.username %>
+      </div>
+    </div>
+  <% if @tweet.comments %>
+    <% @tweet.comments.each do |comment| %>
+      <div class="comment">
+        <div class="user-name">
+          <%= comment.user.username %>
+        </div>
+        <div class="comment-content">
+          <%= comment.content %>
+        </div>
+        <% if comment.user == current_user %>
+          <%= link_to tweet_comment_path(@tweet, comment), method: :delete, data: { confirm: "Are you sure?" } do %>
+            <span class="glyphicon glyphicon-remove delete-comment"></span>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
+  <% end %>
 
-<ul>
-  <%= render(partial: 'comments/comment', collection: @tweet.comments) %>
-</ul>
+  <div class="comment-like-form row">
+    <div class="like-button col-sm-1">
+      <span class="glyphicon glyphicon-heart-empty"></span>
+    </div>
+    <div class="comment-form col-sm-11">
+      <%= form_for [@tweet, @tweet.comments.new] do |f| %>
+        <%= f.text_field :content, placeholder: 'Add a comment...' %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
