finished all basics

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -254,3 +254,11 @@ input, textarea {
 .users.follow {
   padding: 0;
 }
+
+/*Notification stuff*/
+.notification-dropdown {
+  margin-top: 10px;
+  button {
+    border: none;
+  }
+}
