--- a/app/views/public_activity/comment/_update.html.erb
+++ b/app/views/public_activity/comment/_update.html.erb
@@ -1,1 +1,1 @@
-updated comment to <%= link_to activity.trackable.tweet.body, activity.trackable.tweet %>
+updated comment to <%= link_to truncate(activity.trackable.tweet.body, :ommision => "... Read More", :length => 50), activity.trackable.tweet %>
