--- a/app/views/public_activity/tweet/_destroy.html.erb
+++ b/app/views/public_activity/tweet/_destroy.html.erb
@@ -1,1 +1,5 @@
-deleted a tweet <%= link_to activity.trackable.name, activity.trackable %>
+<% if activity.trackable %>
+	<%= link_to truncate(activity.trackable.body, :ommision => "... Read More", :length => 50), activity.trackable %>
+<% else %>
+	which has since been removed
+<% end %>
