--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -19,7 +19,8 @@
   <!-- # notice 'multiple: true' -->
   <%= f.label :images %>
   <%#= f.file_field :images, multiple: true %>
-  <%= f.file_field :images, multiple: true, accept: "image/jpeg, image/jpg, image/gif, image/png" %>
+  <%= f.file_field :media %>
+  <%#= f.file_field :images, multiple: true, accept: "image/jpeg, image/jpg, image/gif, image/png" %>
 
   <div class="actions">
     <%= f.submit %>
