--- a/app/views/public_activity/comment/_destroy.html.erb
+++ b/app/views/public_activity/comment/_destroy.html.erb
@@ -1,1 +1,1 @@
-deleted comment to <%= link_to activity.trackable.tweet.body, activity.trackable.tweet %>
+deleted comment on <%= link_to activity.trackable.tweet.body, activity.trackable.tweet %>
