--- a/app/views/partials/_comments.html.erb
+++ b/app/views/partials/_comments.html.erb
@@ -1,3 +1,3 @@
 <a href="">
-	<i class="fa fa-comment-o"> <%#= tweet.comments.count %></i>
+	<i class="fa fa-comment-o"> <%= tweet.comments.count %></i>
 </a>
