--- a/app/views/partials/_users.html.erb
+++ b/app/views/partials/_users.html.erb
@@ -73,7 +73,7 @@
   <div class="col-lg-3">
     <div class="">
       <div class="well stats">
-        <%#= render 'partials/suggestions' %>
+        <%= render 'partials/suggestions' %>
       </div>
     </div>
   </div>
