--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -43,11 +43,11 @@
 }
 
 .comment-like-form {
-  padding-top: 24px;
-  margin-top: 13px;
+  padding-top: 7px;
+  /*margin-top: 13px;*/
   margin-left: 24px;
   margin-right: 24px;
-  min-height: 68px;
+  /*min-height: 68px;*/
   align-items: center;
   border-top: 1px solid #EEEFEF;
   flex-direction: row;
