--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div>tweeted by <%= tweet.user.username %></div>
+  <div><%= image_tag 'avatar.jpg', class: "avatar-xs"%> <%= tweet.user.username %> <br> <%= link_to tweet.user.username%></div>
   <p>
   	<%= auto_link(parse(truncate(tweet.body, :ommision => "... Read More", :length => 100)), html: { target: '_blank' }) %> <br>
      <%= image_tag tweet.media.url(:medium) if tweet.media?  %>
@@ -26,9 +26,6 @@
     </div>
   </div>
   <div class="comment-like-form row">
-    <div class="like-button col-sm-1">
-      <span class="glyphicon glyphicon-heart-empty"></span>
-    </div>
     <div class="comment-form col-sm-11">
       <%= form_for([tweet, tweet.comments.build], remote: true) do |f| %>
         <%= f.text_field :content, placeholder: 'Add a comment...', class: "comment_content", id: "comment_content_#{tweet.id}" %>
